changed vet personel second name to text

--- a/app/src/main/res/layout/layout_poultry_form.xml
+++ b/app/src/main/res/layout/layout_poultry_form.xml
@@ -582,7 +582,7 @@
                     android:layout_height="45dp"
                     android:paddingLeft="@dimen/dimen_10dp"
                     android:background="@drawable/edittext_corner"
-                    android:inputType="numberDecimal" />
+                    android:inputType="text" />
 
             </LinearLayout>
 
