--- a/app/src/main/res/layout/dialog_successful_message.xml
+++ b/app/src/main/res/layout/dialog_successful_message.xml
@@ -15,21 +15,25 @@
         android:id="@+id/pop_up_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="@dimen/dimen_20dp"
         android:src="@drawable/success"
-        android:layout_margin="@dimen/dimen_20dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/thank_you_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/pop_up_img"
-        android:text="Success"
-        android:textSize="45sp"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
         android:layout_margin="@dimen/dimen_20dp"
-        />
+        android:gravity="center"
+        android:text="Success"
+        android:textColor="@color/colorPrimary"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pop_up_img" />
 
     <LinearLayout
         android:id="@+id/pop_content"
